--- a/src/scss/ui/swiper.scss
+++ b/src/scss/ui/swiper.scss
@@ -42,7 +42,7 @@
         }
     }
     &:disabled{
-        background-color: $gray;
+        background-color: $gray !important;
         cursor: default;
     }
 }
