--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -23,38 +23,38 @@
             </a>
             <div class="desktop">
                 <nav class="header__c-nav">
-                    <a href="#" class="btn-tr txt16">Услуги</a>
-                    <a href="#" class="btn-tr txt16">наши проекты</a>
-                    <a href="#" class="btn-tr txt16">О компании</a>
-                    <a href="#" class="btn-tr txt16">Новости</a>
-                    <a href="#" class="btn-tr txt16">контакты</a>
+                    <a href="#" class="btn-header txt16">Услуги</a>
+                    <a href="#" class="btn-header txt16">наши проекты</a>
+                    <a href="#" class="btn-header txt16">О компании</a>
+                    <a href="#" class="btn-header txt16">Новости</a>
+                    <a href="#" class="btn-header txt16">контакты</a>
                 </nav>
             </div>
             <div class="desktop">
                 <div class="header__c-desk-right">
-                    <a href="#" class="btn-tr txt16">+7 499 136 26 49</a>
-                    <button  class="btn-tr txt16 modal-opener" data-modal="callback">Заявка
-                        <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="#" class="btn-header txt16">+7 499 136 26 49</a>
+                    <button  class="btn-header txt16 modal-opener" data-modal="callback">Заявка
+                        <svg width="34" height="34" viewBox="0 0 34 34" fill="none" stroke="white" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M5.66732 5.6665H28.334C29.8923 5.6665 31.1673 6.9415 31.1673 8.49984V25.4998C31.1673 27.0582 29.8923 28.3332 28.334 28.3332H5.66732C4.10898 28.3332 2.83398 27.0582 2.83398 25.4998V8.49984C2.83398 6.9415 4.10898 5.6665 5.66732 5.6665Z"
-                                stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M31.1673 8.5L17.0007 18.4167L2.83398 8.5" stroke="white" stroke-width="2"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M31.1673 8.5L17.0007 18.4167L2.83398 8.5" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
 
                     </button>
-                    <a href="#" class="btn-tr txt16">ru</a>
+                    <a href="#" class="btn-header txt16">ru</a>
                 </div>
 
 
             </div>
             <div class="mobile header__c-lang-mob">
-                <button class="btn-tr txt16">
+                <button class="btn-header txt16">
                     ru
                 </button>
             </div>
             <div class="mobile">
-                <button class="header__c-btn ">
+                <button class="header__c-btn modal-opener" data-modal="header">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -62,26 +62,7 @@
             </div>
            
 
-            <div class="mobile">
-                <div class="header__c-modal">
-                    <div class="header__c-modal-self">
-                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Услуги</a>
-                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Наши проекты</a>
-                        <a href="#" class="txt-up txt16 header__c-modal-self-item">О компании</a>
-                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Новости</a>
-                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Контакты</a>
-                        <div class="header__c-modal-self-btns ">
-                            <button class="txt-up txt16 header__c-modal-self-btns-e">ru</button>
-                            <button class="txt-up txt16 header__c-modal-self-btns-e flex-row">
-                                Заявка
-                                <img src="../assets/images/icons/mail-black.svg" alt="mail">
-                            </button>
-                        </div>
-                        <a href="#" class="txt16 header__c-modal-self-item">+7 499 136 26 49</a>
-                    </div>
-                   
-                </div>
-            </div>
+          
 
 
         </div>
