--- a/src/components/_heading.html
+++ b/src/components/_heading.html
@@ -2,20 +2,24 @@
     <div class="section-bg-img">
         <img src="../assets/images/heading.webp" alt="heading">
     </div>
-    <div class="container heading__с">
-        <div class="heading__c-top">
-            <h1 class="tl1 col-wh">
-                СОЗДАНИЕ
-                ИНТЕРЬЕРОВ
-                под ключ
-            </h1>
+    <div class="container section-bg__c">
+        <div class=" heading__c">
+            <div class="heading__c-top">
+                <h1 class="tl1 col-wh">
+                    СОЗДАНИЕ
+                    ИНТЕРЬЕРОВ
+                    под ключ
+                </h1>
+            </div>
+            <div class="heading__c-bottom">
+                <p class="txt20">Индивидуальный подход
+                    и профессионализм позволяют компании ТСМ
+                    достигать безупречных результатов
+                    в проектах любой сложности
+                </p>
+            </div>
         </div>
-        <div class="heading__c-bottom">
-            <p class="txt20">Индивидуальный подход
-                и профессионализм позволяют компании ТСМ
-                достигать безупречных результатов
-                в проектах любой сложности
-            </p>
-        </div>
+
     </div>
+
 </section>
