--- a/src/scss/components/projects-detail.scss
+++ b/src/scss/components/projects-detail.scss
@@ -1,6 +1,9 @@
 .projects-detail-top {
-    background-color: $white;
-    padding-top: 0 !important;
+    background-color: $bg;
+    position: relative;
+
+    
+  
 
 
     & .swiper {
@@ -16,10 +19,10 @@
             top: 0;
             width: 100%;
             height: 100%;
-            box-shadow: 0px -26rem 13.5rem -8.2rem $white inset;
+            box-shadow: 0px -26rem 13.5rem -8.2rem $bg inset;
 
             @include small-tablet {
-                box-shadow: 0px -25rem 13.5rem -8.2rem $white inset;
+                box-shadow: 0px -25rem 13.5rem -8.2rem $bg inset;
             }
         }
 
