--- a/src/scss/components/recomendation.scss
+++ b/src/scss/components/recomendation.scss
@@ -4,31 +4,50 @@
         flex-direction: column;
         gap: 3.2rem;
 
+        & .tl1 {
+            font-size: 5rem;
+        }
+
+        &-desktop {
+            @include desktop {
+                display: flex;
+                flex-direction: column;
+                gap: 3.2rem;
+            }
+        }
+
         &-list {
             margin-top: 7rem;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            
+
             gap: 3.2rem;
 
             &-e {
-                border: .1rem solid $gray;
+                box-shadow:inset 0px 0px 0px .1rem $gray;
                 padding: 3rem;
                 box-sizing: border-box;
+                @include small-tablet{
+               box-shadow:inset 0px 0px 0px .2rem $gray;
+                }
 
                 &-img {
-                    width: 34rem;
-                    height: 41rem;
+                    width: 100%;
+                    height: 44rem;
                     display: flex;
 
                     @include small-tablet {
                         width: 100%;
-                        height: 60rem;
+                        height: 80rem;
                     }
 
                     & img {
                         object-fit: cover;
                         object-position: center;
+                        @include small-tablet{
+                            object-fit: contain;
+                        }
+                        
                     }
                 }
 
@@ -38,7 +57,7 @@
                     width: 100%;
                     justify-content: space-between;
 
-                    & img{
+                    & img {
                         transform: rotate(-90deg);
                         @include same-size(2.6rem, 2.6rem);
                     }
@@ -49,5 +68,18 @@
 
         }
 
+        &-slider {
+            width: 100%;
+
+            &-top {
+                display: flex;
+                justify-content: space-between;
+                margin: 8rem 0 12rem;
+            }
+
+            & .swiper {
+                width: 100%;
+            }
+        }
     }
 }
