--- a/src/components/_card-news.html
+++ b/src/components/_card-news.html
@@ -1,7 +1,7 @@
 <li class="card-news">
     <p class="txt18 col-gr card-news__date">02.02.2021</p>
     <div class="card-news__img">
-        <img src="../assets/images/projects.webp" alt="img">
+        <img src="./assets/images/projects.webp" alt="img">
     </div>
     <div class="card-news__info">
         <h3 class="tl3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam accusantium, consectetur
