--- a/src/components/_contact-us.html
+++ b/src/components/_contact-us.html
@@ -1,6 +1,6 @@
 <section class="contact-us">
     <div class="contact-us__bg">
-        <img src="../assets/images/contact-us.webp" alt="contact">
+        <img src="./assets/images/contact-us.webp" alt="contact">
     </div>
     <div class="container contact-us__c">
         <h2 class="tl2 ">свяжитесь с нами</h2>
