--- a/src/components/_header-mobile.html
+++ b/src/components/_header-mobile.html
@@ -3,7 +3,7 @@
         <div class="header-mobile__self">
 
             <div class="header-mobile__self-top">
-                <img class="header-mobile__self-top-logo" src="../assets/images/icons/logo-green.svg" alt="tcm">
+                <img class="header-mobile__self-top-logo" src="./assets/images/icons/logo-green.svg" alt="tcm">
                 <button class="header-mobile__self-top-closer modal-closer">
                 </button>
             </div>
@@ -16,7 +16,7 @@
                 <button class="txt-up txt16 header-mobile__self-btns-e">ru</button>
                 <button class="txt-up txt16 header-mobile__self-btns-e flex-row">
                     Заявка
-                    <img src="../assets/images/icons/mail-black.svg" alt="mail">
+                    <img src="./assets/images/icons/mail-black.svg" alt="mail">
                 </button>
             </div>
             <a href="#" class="txt16 header-mobile__self-item">+7 499 136 26 49</a>
