--- a/src/components/_heading.html
+++ b/src/components/_heading.html
@@ -1,6 +1,6 @@
 <section class="heading section-bg">
     <div class="section-bg-img">
-        <img src="../assets/images/heading.webp" alt="heading">
+        <img src="./assets/images/heading.webp" alt="heading">
     </div>
     <div class="container section-bg__c">
         <div class=" heading__c">
