--- a/src/components/_modals.html
+++ b/src/components/_modals.html
@@ -9,10 +9,10 @@
                     сетях</p>
                 <div class=" modal-commercial__c-links">
                     <a href="#">
-                        <img src="../assets/images/icons/vk.svg" alt="vk">
+                        <img src="./assets/images/icons/vk.svg" alt="vk">
                     </a>
                     <a href="#">
-                        <img src="../assets/images/icons/tg.svg" alt="tg">
+                        <img src="./assets/images/icons/tg.svg" alt="tg">
                     </a>
                 </div>
             </div>
