--- a/src/components/_news.html
+++ b/src/components/_news.html
@@ -18,7 +18,7 @@
                 <li class="swiper-slide last-news-item">
                     <a href="#"></a>
                     <div class="last-news-item-img">
-                        <img src="../assets/images/news.webp" alt="news">
+                        <img src="./assets/images/news.webp" alt="news">
                     </div>
                     <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
@@ -41,7 +41,7 @@
                 <li class="swiper-slide last-news-item">
                     <a href="#"></a>
                     <div class="last-news-item-img">
-                        <img src="../assets/images/news.webp" alt="news">
+                        <img src="./assets/images/news.webp" alt="news">
                     </div>
                     <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
@@ -64,7 +64,7 @@
                 <li class="swiper-slide last-news-item">
                     <a href="#"></a>
                     <div class="last-news-item-img">
-                        <img src="../assets/images/news.webp" alt="news">
+                        <img src="./assets/images/news.webp" alt="news">
                     </div>
                     <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
@@ -87,7 +87,7 @@
                 <li class="swiper-slide last-news-item">
                     <a href="#"></a>
                     <div class="last-news-item-img">
-                        <img src="../assets/images/news.webp" alt="news">
+                        <img src="./assets/images/news.webp" alt="news">
                     </div>
                     <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
