--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -304,7 +304,7 @@
             &-closer {
                 width: 4.8rem;
                 height: 4.8rem;
-                background-image: url(../../assets/images/icons/x-black.svg);
+                background-image: url(./assets/images/icons/x-black.svg);
                 background-position: center;
                 background-size: 80%;
                 background-repeat: no-repeat;
