--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -22,7 +22,7 @@
     &-close {
         @include same-size(4rem, 4rem);
         margin-left: auto;
-        background-image: url(../../assets/images/icons/x-modal.svg);
+        background-image: url(./assets/images/icons/x-modal.svg);
         background-position: center;
         background-size: 50%;
         background-repeat: no-repeat;
