--- a/src/scss/ui/different.scss
+++ b/src/scss/ui/different.scss
@@ -3,7 +3,7 @@
     padding-left: 2.4rem;
 
     & li {
-        list-style: url(../../assets/images/icons/list-dot.svg) !important;
+        list-style: url(./assets/images/icons/list-dot.svg) !important;
     }
 }
 
