--- a/src/scss/ui/inputs.scss
+++ b/src/scss/ui/inputs.scss
@@ -71,7 +71,7 @@
         opacity: 0;
 
         &:checked+.checkbox-check {
-            background-image: url(../../assets/images/icons/checkbox.svg);
+            background-image: url(./assets/images/icons/checkbox.svg);
 
            
         }
