--- a/src/components/_card-project.html
+++ b/src/components/_card-project.html
@@ -1,7 +1,7 @@
 <li class="card-project">
     <a href="#" class="card-project__top txt18">
         <span class="col-gr">Россия, Москва, 2021</span>
-        <img src="../assets/images/icons/arrow-down-green.svg" alt=">">
+        <img src="./assets/images/icons/arrow-down-green.svg" alt=">">
     </a>
     <a href="#" class="txt24 card-project__name">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
         eius.</a>
@@ -14,13 +14,13 @@
 
         <ul class="swiper-wrapper">
             <li class="swiper-slide">
-                <img src="../assets/images/projects.webp" alt="img">
+                <img src="./assets/images/projects.webp" alt="img">
             </li>
             <li class="swiper-slide">
-                <img src="../assets/images/heading.webp" alt="img">
+                <img src="./assets/images/heading.webp" alt="img">
             </li>
             <li class="swiper-slide">
-                <img src="../assets/images/news.webp" alt="img">
+                <img src="./assets/images/news.webp" alt="img">
             </li>
         </ul>
 
