--- a/src/components/_clients.html
+++ b/src/components/_clients.html
@@ -1,43 +1,43 @@
 <div class="clients container">
     <ul class="clients-list">
         <li>
-            <img src="../assets/images/partners/alfabank.svg" alt="partner">
+            <img src="./assets/images/partners/alfabank.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/amway.svg" alt="partner">
+            <img src="./assets/images/partners/amway.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/ashan.svg" alt="partner">
+            <img src="./assets/images/partners/ashan.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/huawei.svg" alt="partner">
+            <img src="./assets/images/partners/huawei.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/lamoda.svg" alt="partner">
+            <img src="./assets/images/partners/lamoda.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/otp-bank.svg" alt="partner">
+            <img src="./assets/images/partners/otp-bank.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/psbank.svg" alt="partner">
+            <img src="./assets/images/partners/psbank.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/regus.svg" alt="partner">
+            <img src="./assets/images/partners/regus.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/regus.svg" alt="partner">
+            <img src="./assets/images/partners/regus.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/stada.svg" alt="partner">
+            <img src="./assets/images/partners/stada.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/tbank.svg" alt="partner">
+            <img src="./assets/images/partners/tbank.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/trend.svg" alt="partner">
+            <img src="./assets/images/partners/trend.svg" alt="partner">
         </li>
         <li>
-            <img src="../assets/images/partners/vtb.svg" alt="partner">
+            <img src="./assets/images/partners/vtb.svg" alt="partner">
         </li>
     </ul>
 </div>
