--- a/src/components/_our-projects.html
+++ b/src/components/_our-projects.html
@@ -25,7 +25,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/projects.webp" alt="projects">
+                        <img src="./assets/images/projects.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -33,7 +33,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/news.webp" alt="projects">
+                        <img src="./assets/images/news.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -41,7 +41,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/projects.webp" alt="projects">
+                        <img src="./assets/images/projects.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -49,7 +49,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/news.webp" alt="projects">
+                        <img src="./assets/images/news.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -57,7 +57,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/projects.webp" alt="projects">
+                        <img src="./assets/images/projects.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -65,7 +65,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/projects.webp" alt="projects">
+                        <img src="./assets/images/projects.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
@@ -73,7 +73,7 @@
                 <li class="swiper-slide our-projects-item">
                     <a href="#"></a>
                     <div class=" our-projects-item-img">
-                        <img src="../assets/images/projects.webp" alt="projects">
+                        <img src="./assets/images/projects.webp" alt="projects">
                     </div>
                     <p class="our-projects-item-name">Alfa Research Center</p>
                     <p class="txt20 col-grn">2023</p>
