--- a/src/scss/components/not-found.scss
+++ b/src/scss/components/not-found.scss
@@ -29,7 +29,7 @@
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            background-image: url(../../assets/images/projects.webp);
+            background-image: url(./assets/images/projects.webp);
 
             @include small-tablet {
                 font-size: 24rem;
