--- a/src/scss/components/projects-detail.scss
+++ b/src/scss/components/projects-detail.scss
@@ -53,7 +53,7 @@
             & .swiper-btn {
                 background-color: transparent !important;
                 border: .1rem solid $gray;
-                background-image: url(../../assets/images/icons/arrow-down-green.svg);
+                background-image: url(./assets/images/icons/arrow-down-green.svg);
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: 50%;
