--- a/src/scss/ui/swiper.scss
+++ b/src/scss/ui/swiper.scss
@@ -1,7 +1,7 @@
 .swiper-btn{
     border-radius: 50%;
     background-color: $black;
-    background-image: url(../../assets/images/icons/arrow-swiper-right.svg);
+    background-image: url(./assets/images/icons/arrow-swiper-right.svg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 50%;
@@ -19,7 +19,7 @@
    }
     
     &-prev{
-        background-image: url(../../assets/images/icons/arrow-swiper-left.svg);
+        background-image: url(./assets/images/icons/arrow-swiper-left.svg);
         &:active{
             background-position: 20% 50% ;
             background-color: $green;
