--- a/src/components/_clients.html
+++ b/src/components/_clients.html
@@ -1,4 +1,4 @@
-<div class="clients container">
+<div class="clients ">
     <ul class="clients-list">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
