--- a/src/components/_our-projects.html
+++ b/src/components/_our-projects.html
@@ -1,6 +1,6 @@
 <section class="our-projects">
-    <div class="container our-projects__c">
-        <div class="section-heading-swiper">
+    <div class=" our-projects__c">
+        <div class="section-heading-swiper container">
 
             <div class="swiper-btn-container nav">
                 <button class="swiper-btn swiper-btn-prev "></button>
