--- a/src/scss/components/_clients.scss
+++ b/src/scss/components/_clients.scss
@@ -1,7 +1,8 @@
 .clients {
   overflow: hidden;
-  margin:0 auto;
+  margin: 0 auto;
   padding: 0;
+  width: 100%;
 
   &-list {
     display: grid;
@@ -17,15 +18,19 @@
 
     & li {
       display: flex;
-      max-width: 27rem;
-      max-height: 10rem;
+      width: 27rem;
+      height: 10rem;
       align-items: center;
       justify-content: center;
 
+      @include small-tablet {
+        height: 9rem;
+      }
+
       & img {
-        object-fit: contain;
-        max-height: 60%;
-        max-width: 80%;
+       max-height: 100%;
+       max-width: 100%;
+      
       }
     }
   }
