--- a/src/scss/components/_our-projects.scss
+++ b/src/scss/components/_our-projects.scss
@@ -33,12 +33,13 @@
 
                 &-img {
                     display: flex;
-                    width: 35.7rem;
+                    width:36rem;
                     height: 45rem;
                     transition: width .5s, height .5s;
-
+                    min-width: 21.5vw;
                     @include small-tablet {
                         width: 100%;
+                      
                         height: 84rem;
                     }
 
@@ -72,19 +73,24 @@
                 }
 
                 &_prev {
+                    
                     @include desktop {
+                        margin-right: 2rem;
                         & .our-projects-item-img {
                             height: 51rem;
-                         transform: translateX(5.5rem);  
+                         transform: translateX(6rem);  
+                         
                         }
                     }
                 }
 
                 &_next {
                     @include desktop {
+                        margin-left: 2rem;
                         & .our-projects-item-img {
                             height: 51rem;
-                            transform: translateX(-5.5rem);  
+                            transform: translateX(-6rem);  
+                           
                         }
                     }
 
@@ -109,6 +115,7 @@
 
                         & .our-projects-item-img {
                            width: 62rem;
+                           min-width: 30vw;
                            height: 62rem;
                         }
                     }
